--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
-body {
-    background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.NOB629gjdyzegkdAVzOg4gHaHa%26pid%3DApi&f=1&ipt=eb37f062beaf3ba9a74f61bce7871c7e6a7186166f120751891b3a7217c0dd71&ipo=images);
+header{
+    background-color: #5CBDE6;
 }
+
+footer{
+    background-color: #5CBDE6;
+}
+.footer-columns {
+    display: flex;
+ }
+ 
+ .footer-column {
+    flex: 50%;
+    margin: 20px;
+ }
